--- a/luasrc/view/themes/edge/sysauth.htm
+++ b/luasrc/view/themes/edge/sysauth.htm
@@ -11,7 +11,7 @@
 
 <div class="speaker"></div>
 <audio loop id="player" autoplay type="audio/mpeg"></audio>
-<script>
+<!-- <script>
 setTimeout(function(){
 var sound = document.getElementById("player");
 sound.setAttribute('src','https://cdn.jsdelivr.net/gh/kkkidding/custom2@master/audio.ogg');
@@ -25,7 +25,7 @@ if (/(iPhone|iPad|iPod|iOS|Android)/i.test(navigator.userAgent)) {
 	$("audio").prop("autoplay", false);
 	$("audio")[0].load();
 };
-</script>
+</script> -->
 
 <!-- partial -->
 <div class="main">
