--- a/htdocs/luci-static/edge/custom.css
+++ b/htdocs/luci-static/edge/custom.css
@@ -42,5 +42,5 @@
     --breakpoint-lg: 992px;
     --breakpoint-xl: 1200px;
 
-    --font-body: "Microsoft Yahei", "WenQuanYi Micro Hei", "sans-serif", "Helvetica Neue", "Helvetica", "Hiragino Sans GB";
+    --font-body: "Sarasa Gothic SC Nerd Font", "Microsoft Yahei", "WenQuanYi Micro Hei", "sans-serif", "Helvetica Neue", "Helvetica", "Hiragino Sans GB";
 }
