--- a/luasrc/view/themes/edge/sysauth.htm
+++ b/luasrc/view/themes/edge/sysauth.htm
@@ -6,7 +6,7 @@
 
 <%+header_login%>
 
-<div id="CrossFade"><img src="<%=media%>/background/1.jpg" alt="img"/><img src="<%=media%>/background/2.jpg" alt="img"/><img src="<%=media%>/background/3.jpg" alt="img"/>
+<div id="CrossFade"><img src="<%=media%>/background/1.png" alt="img"/><img src="<%=media%>/background/2.png" alt="img"/><img src="<%=media%>/background/3.png" alt="img"/>
 </div>
 
 <div class="speaker"></div>
@@ -29,7 +29,7 @@ if (/(iPhone|iPad|iPod|iOS|Android)/i.test(navigator.userAgent)) {
 
 <!-- partial -->
 <div class="main">
-		<div style="" class="loading">
+		<div class="loading">
 			<div class="sk-folding-cube">
 				<div class="sk-cube1 sk-cube"></div>
 				<div class="sk-cube2 sk-cube"></div>
